src/index.css
@import url("./variables.css");

body {
  background-color: var(--bemo-green-light);
  color: var(--bemo-text);
  height: 100vh;
  font-family: "Orbitron", Courier, monospace;
}

main {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(6, 1fr);
  height: 100%;
}

.side-bar {
  background-color: var(--bemo-green);
  position: relative;
  grid-row: span 5;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 20px;
  border-right: 2px solid var(--bemo-border);
}
.side-bar .options {
  display: flex;
  flex-direction: column;
}
.side-bar .options > a {
  display: flex;
  flex-direction: column;
  color: inherit;
  align-items: center;
  margin-bottom: 30px;
}
.label {
  position: absolute;
  color: #001623;
  transform: rotate(90deg);
  font-size: 96px;
  bottom: 80px;
  font-family: "Early GameBoy", sans-serif;
}
.music,
.home {
  display: flex;
  align-items: center;
}
.music p,
.home p {
  margin-right: 15px;
}
.bottom-bar {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: 20px;
  background-color: var(--bemo-green);
  grid-column: span 6;
  grid-row: 6/7;
  border-top: 2px solid var(--bemo-border);
}
.title-block {
  display: flex;
  align-items: center;
  margin-left: 40px;
}
.title-screen {
  background-color: var(--bemo-green-dark);
  color: var(--bemo-green-light);
  box-shadow: 4px -4px #0d281e;
  display: inline-block;
  height: auto;
  width: 100%;
  font-family: "Early GameBoy", sans-serif;
  padding: 10px;
  border: 2px solid var(--bemo-border);
}
.tool-box {
  display: flex;
  align-items: center;
  justify-content: center;
}
.tool-bar {
  display: flex;
  align-items: center;
}
.tool-bar > div {
  margin-left: 20px;
}
.tool-bar .prev,
.tool-bar .next {
  background-color: var(--bemo-button-purple);
  padding: 5px 15px;
  box-shadow: 3px -3px #101054;
  border-radius: 15px;
  border: 2px solid var(--bemo-border);
}
.tool-bar .prev:active,
.tool-bar .next:active {
  box-shadow: 1px -1px #101054;
  transition: ease-in-out 0.1s;
  cursor: pointer;
}
.tool-bar .play {
  background-color: var(--bemo-button-red);
  border-radius: 100%;
  padding: 15px;
  box-shadow: 3px -3px #991549;
  border: 2px solid #7a113b;
}

.tool-bar .play:active {
  box-shadow: 1px -1px #991549;
  transition: ease-in-out 0.1s;
  cursor: pointer;
}

.main-container {
  font-family: "Early GameBoy", sans-serif;
  grid-column: span 5;
  grid-row: span 5;
}

.main-container .home-video {
  width: 100%;
  height: 100%;
}
.main-container .files-render {
  display: flex;
  width: 100%;
  align-items: start;
  flex-direction: column;
}
.main-container .files-render div {
  border-bottom: 2px solid var(--bemo-border);
  padding: 4px 2px;
  width: 100%;
}

.main-container .files-render div:hover {
  background-color: var(--bemo-border);
  color: var(--bemo-green-light);
  padding: 2px;
}

.main-container .files-render div:active {
  color: var(--bemo-border);
  background-color: var(--bemo-green-light);
  padding: 2px;
}
.main-container .add-source {
  background-color: var(--bemo-green-dark);
  color: var(--bemo-green-light);
  padding: 6px 2px;
}
.main-container.add-source:hover {
  background-color: var(--bemo-green-dark);
  color: var(--bemo-green-light);
  padding: 6px 2px;
}

.main-container .add-source:active {
  color: var(--bemo-green-dark);
  background-color: var(--bemo-green-light);
  padding: 6px 2px;
}

.extra-tools {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
}
.extra-tools .widget-mode {
  background-color: var(--bemo-button-yellow);
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 100%;
  box-shadow: 3px -3px #423c00;
  border: 2px solid var(--bemo-border);
}
.extra-tools .widget-mode:active {
  box-shadow: 1px -1px #423c00;
  transition: ease-in-out 0.1s;
  cursor: pointer;
}

.current-song {
  background-color: var(--bemo-border) !important;
  color: var(--bemo-green-light) !important;
  padding: 2px;
}

